# lib-python-worktree

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: lint.yml  release.yml  test.yml  ticket.yml
.serena/: .reminder-state.json  project.yml
.seretos/: projects.yml  worktree-setup.yml
examples/unity/: README.md
examples/unity/.seretos/: worktree-setup.yml
examples/webapp/: README.md
examples/webapp/.seretos/: worktree-setup.yml
src/lib_python_worktree/: __init__.py
src/lib_python_worktree/contract/: __init__.py  loader.py  schema.py
src/lib_python_worktree/core/: __init__.py  _env_utils.py  _exceptions.py  _git_utils.py  manager.py  plugin_install.py  plugin_seed.py  port_allocator.py  process_lifecycle.py  state.py  yaml_store.py
src/lib_python_worktree/setup/: __init__.py  runner.py
tests/: conftest.py  test_contract.py  test_env_utils.py  test_examples.py  test_manager.py  test_manager_helpers.py  test_plugin_install.py  test_plugin_seed.py  test_port_allocator.py  test_process_lifecycle.py  test_setup_runner.py  test_setup_steps_create.py  test_smoke.py  test_state.py  test_state_persistence.py  test_teardown.py  test_w4_port_allocation.py  test_w6_lifecycle.py  test_w7_state_persistent.py  test_w8_teardown.py
