[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-python-worktree"
version = "0.1.10"
description = "Git-worktree lifecycle + contract engine (create/list/remove, YAML setup contract, port allocation, setup-script runner, state persistence) for the Seretos agent-plugin ecosystem"
requires-python = ">=3.11"
authors = [{ name = "Arne von Appen" }]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "portalocker>=2.7",
  "psutil>=5.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=4",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --cov=lib_python_worktree --cov-report=term-missing --cov-fail-under=80"
markers = [
  "requires_git: marks tests that invoke real git subprocesses (skipped if git is absent)",
]
